fix: add scroll to code & darken img in dark mode

--- a/themes/purity/styles/color.less
+++ b/themes/purity/styles/color.less
@@ -36,6 +36,7 @@
   --article-border: lighten(@primary, 5%);
   --article-title-border: #eee;
   --article-code-bg: #f6f6f6;
+  --article-code-scroll: var(--gray-1);
   --article-code-text: var(--black-4);
   --paginator-front: var(--primary);
   --paginator-back: var(--gray-2);
